# coding-challenges

./: .gitignore  README.md  build.gradle  settings.gradle
.github/workflows/: gradle.yml  leetcode-python.yml
assorted_python_problems/: pyproject.toml
assorted_python_problems/src/: dice.py  perfect_tree.py  pit.py  trapezoid_area_estimate.py
assorted_python_problems/src/extratypes/: __init__.py
book_sales/: README.md  build.gradle
book_sales/src/main/resources/sql/: query.sql  schema.sql
book_sales/src/test/groovy/: BookSalesQuerySpec.groovy
book_sales/src/test/resources/sql/: insert_order_template.sql  insert_product_template.sql
exchange/: README.md  build.gradle
exchange/src/main/java/it/gcatania/exchange/: Exchange.java  Order.java  OrderType.java  (+1 more)
gradle/wrapper/: gradle-wrapper.properties
leetcode/: pyproject.toml
leetcode/src/: bulbs.py  continuous_subarray_sum.py  median_of_two_sorted_arrays.py  pit.py  string_arrays_equivalent.py
number_in_words/: README.md  build.gradle
order_book/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml
order_book/src/order_book/: model.py
order_book/tests/unit/: test_order_book.py  test_order_book_entry.py  test_order_fill.py
python/: random_numbers.py  tests.py
random-numbers/: README.md
random-numbers/python/: random_numbers.py  random_numbers_pythonic.py  tests.py
random_numbers/: README.md
random_numbers/java/: build.gradle
random_numbers/python/: random_numbers.py  random_numbers_pythonic.py  tests.py
sitemap/: .gitignore  README.md  requirements.txt  scrapy.cfg
sitemap/sitemap/: exporters.py  items.py  settings.py
sitemap/sitemap/spiders/: sitemap_maker.py
word-sorter/: README.md
word_sorter/: build.gradle
(+12 files in other folders)
