[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "assorted_python_problems"
description = "Some non-leetcode python problems from other take home tests"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["python", "problems"]
license = {text = "APACHE 2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[tool.setuptools_scm]
root = ".."