[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "order-book"
description = "Order book implementation"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["order-book"]
license = {text = "APACHE 2.0"}
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  'black',
  'isort',
  'flake8',
  'flake8-docstrings',
  'pre-commit',
]
tests = [
  'pytest',
]

[tool.setuptools_scm]
root = ".."

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
